# Budget-Insight

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RandomHelper.cpp  RandomHelper.h  Transaction.cpp  Transaction.h  TransactionTestGenerator.cpp  TransactionTestGenerator.h  config.yml  main.cpp
.circleci/: config.yml
Core/: CMakeLists.txt
Core/include/: Database.h  Importer.h  Transaction.h  TransactionApi.h
Core/src/: Database.cpp  Importer.cpp  Transaction.cpp  TransactionApi.cpp
Data/: Database.cpp  Database.h
Server/: CMakeLists.txt
Server/include/: ApiHandler.h  MyJsonController.h  Serializer.h  WebServer.h
Server/src/: ApiHandler.cpp  MyJsonController.cpp  Serializer.cpp  WebServer.cpp
Util/include/: Log.h  RandomHelper.h  TransactionTestGenerator.h
Util/src/: Log.cpp  RandomHelper.cpp  TransactionTestGenerator.cpp
www/: index.html
www/private/: base.html
www/public/: all-transactions.html  by-id.html  data.csv  database.html  index.html
www/public/shared/css/: base.css
www/public/shared/js/: graph.js
